Updated for jumbotron

--- a/css/neue.css
+++ b/css/neue.css
@@ -1,7 +1,11 @@
 body {
   padding-top: 50px;
 }
-.starter-template {
+.neue-template {
   padding: 40px 15px;
+  text-align: center;
+}
+
+.jumbotron {
   text-align: center;
 }
